--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.9",
+    "@fullcalendar/core": "^6.1.15",
     "express": "^4.18.2",
     "flowbite": "^2.5.1",
     "rxjs": "~7.8.0",
