--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,10 @@
         },
         "@schematics/angular:pipe": {
           "standalone": false
-        }
+        },
+        "@schematics/angular:service": {
+          "path": "src/app/services"
+        }    
       },
       "root": "",
       "sourceRoot": "src",
