--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@fullcalendar/angular": "^6.1.15",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "express": "^4.18.2",
     "flowbite": "^2.5.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
